FIX: dashboard: overflow in edit mode

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -27,3 +27,8 @@ li:hover table.searchbox {
 *[id^="google-visualization-errors-all-"] {
 	position: absolute;
 }
+
+.gs-resize-handle-both {
+	bottom: 0;
+	right: 0;
+}
